# rust-bot

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  check_db.py  setup.ps1
.cargo/: config.toml
.githooks/: pre-commit
docs/: ARCHITECTURE.md  STRATEGY.md  TRADING_LOG.md
scripts/: check_threshold_vs_block.py  deploy-from-local.ps1  deploy-remote.sh  deploy-server.sh  dev-bot-with-ngrok.ps1  ec2-bootstrap.sh  install-polybot-profile.ps1  install-supervisor-service.sh  peek_strategy_db.py  polybot-env.ps1  polybot.ps1  polymarket-bot.service  polymarket-supervisor.service  scan-telegram-processes.ps1  set_telegram_bot_avatar.py  setup-git-hooks.ps1  stop-telegram-pollers.ps1  sync-env-to-server.ps1  verify-server-env.ps1  verify-server-env.remote.sh
scripts/cloudwatch/: alarm-policy.json  amazon-cloudwatch-agent.json  create-disk-alarm-from-local.ps1  create-disk-alarm-on-server.sh  install-cloudwatch-agent-ubuntu.sh  setup-cloudwatch-aws.ps1
src/: balance.rs  config.rs  execution.rs  lib.rs  main.rs  market_discovery.rs  market_maker.rs  momentum.rs  orderbook.rs  pnl.rs  redemption.rs  risk.rs  rtds_chainlink.rs  sniper.rs  spot_feed.rs  spread_capture.rs  strategy_log.rs  strategy_sizing.rs  telegram.rs  telegram_webapp.rs  tui.rs  types.rs
static/: telegram_dashboard.html  telegram_positions.html
